Fix so content does not overflow in UserFrontpage
^Title

--- a/src/containers/UserFrontpage.css
+++ b/src/containers/UserFrontpage.css
@@ -14,8 +14,7 @@
     padding: 4px;
     display: flex;
     flex-flow: column;
-    min-height: 300px;
-    height: 80vh;
+    min-height: 110vh;
 }
 
 .userFrontpage .projectContainer {
